--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.App-wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+  background-color: lightgray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header, footer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-restaurant-list,
+.App-menu-items,
+.App-current-order {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* padding: 20px; */
+}
+
+.App-restaurant-list,
+.App-current-order {
+  flex: 1;
+  margin: 40px;
+}
+
+.App-menu-items {
+  flex: 2;
 }
