made functional buttons to switch between customer and manager views and added manager dropdown

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,14 @@ main {
 .App-menu-items {
   flex: 2;
 }
+
+.App-view-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+button {
+  border-radius: 10px;
+}
