touch ups to manager interface

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,3 +47,11 @@ main {
 button {
   border-radius: 10px;
 }
+
+.App-select-manager,
+.App-restaurant-name, 
+.App-manager-order-table {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
