--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,15 @@
 header, footer {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.App-view-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-right: 50px;
 }
 
 main {
@@ -44,6 +53,6 @@ main {
   margin: 10px;
 }
 
-button {
+.App-view-buttons button {
   border-radius: 10px;
 }
