--- a/frontend/src/components/currentOrderCartTable/currentOrderCartTable.styles.css
+++ b/frontend/src/components/currentOrderCartTable/currentOrderCartTable.styles.css
@@ -1,13 +1,12 @@
-.current-order-cart-table h2,
-.current-order-cart-table .bootstrap-table,
-.subtotal-checkout-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .subtotal-checkout-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.previous-orders-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
