order status display, cleanup

--- a/frontend/src/components/previousOrder/previousOrder.styles.css
+++ b/frontend/src/components/previousOrder/previousOrder.styles.css
@@ -34,7 +34,13 @@
 
 .status-button {
   display: flex;
+  margin: 4px 10% 0;
   padding-top: 4px;
   justify-content: center;
+  background-color: #727272;
+}
 
+.status {
+  color: white;
+  text-transform: capitalize;
 }
