--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,6 +50,7 @@ main {
 }
 
 .App-menu-list{
+  /* change this if we remove the top bar */
   height: 75vh;
   overflow-y: scroll;
 }
@@ -61,6 +62,7 @@ main {
 }
 
 .current-order-table {
+  /* change this if we remove the top bar */
   height: 75vh;
 }
 
@@ -92,6 +94,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center ;
+  /* change this if we remove the top bar */
   height: 70vh;
   overflow-y: scroll;
 }
