--- a/frontend/src/components/checkoutWindow/checkoutWindow.styles.css
+++ b/frontend/src/components/checkoutWindow/checkoutWindow.styles.css
@@ -34,7 +34,8 @@
   border-color: darkgray;
 }
 
-.react-datepicker-wrapper {
+.react-datepicker-wrapper,
+.react-time-picker-wrapper {
   position: relative;
   z-index: 9999;
   background-color: white;
