fixed scroll bar on customer menu item list

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,7 @@ main {
 .App-menu-list {
   /* change this if we remove the top bar */
   max-height: 75vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .App-current-order {
@@ -66,6 +66,7 @@ main {
 .current-order-table {
   /* change this if we remove the top bar */
   max-height: 75vh;
+  overflow-y: auto;
 }
 
 .App-view-buttons,
