--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,18 @@
 .App-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   background-color: lightgray;
 }
 
-.mangerView {
-  height: 85vh;
-}
-
 header,
+main,
 footer {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
-.App-view-container {
+.App-view-selection {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -24,20 +20,21 @@ footer {
   margin-right: 50px;
 }
 
-main {
-  flex-grow: 1;
+.App-customer-view {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
-  margin-top: 40px;
 }
 
-.App-restaurant-list,
-.App-menu-items,
-.App-current-order,
-.App-manager-table-buttons {
+.App-manager-view {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.App-restaurant-list {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -51,7 +48,7 @@ main {
   flex: 2;
 }
 
-.App-menu-list {
+.App-menu-item-table {
   /* change this if we remove the top bar */
   max-height: 75vh;
   overflow-y: auto;
@@ -71,11 +68,6 @@ main {
   margin: 10px;
 }
 
-.App-view-buttons button,
-.App-manager-table-buttons button {
-  border-radius: 10px;
-}
-
 .App-select-manager,
 .App-restaurant-name,
 .App-manager-order-table {
@@ -84,15 +76,9 @@ main {
   justify-content: center;
 }
 
-.bootstrap-table .custom-header th {
-  background-color: rgb(108, 108, 108);
-  color: white;
-}
-
 .App-restaurant-cards {
   display: flex;
   flex-direction: column;
-  align-items: center;
   /* change this if we remove the top bar */
   height: 70vh;
   overflow-y: scroll;
@@ -101,4 +87,13 @@ main {
 .App-manager-restaurant-name {
   display: flex;
   justify-content: center;
+}
+
+button {
+  border-radius: 10px;
+}
+
+.bootstrap-table .custom-header th {
+  background-color: rgb(108, 108, 108);
+  color: white;
 }
