--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,9 +99,9 @@ main {
   overflow-y: scroll;
 }
 
-.bootstrap-table {
-  max-height: 70vh;
-  overflow-y: scroll;
+.table-responsive {
+  max-height: 77vh;
+  /* overflow-y: scroll; */
 }
 
 .bootstrap-table .custom-header th {
