--- a/frontend/src/components/restaurantHoursWindow/hoursWindow.styles.css
+++ b/frontend/src/components/restaurantHoursWindow/hoursWindow.styles.css
@@ -3,18 +3,29 @@
     flex-direction: row;
     justify-content: space-evenly;
   }
-  
+
   .checkout-left-section {
     display: flex;
     flex-direction: column;
   }
-  
+
   .modal-footer button {
     justify-content: space-between;
   }
-  
+
   .checkbox-asap .form-check-input{
     border-color: darkgray;
   }
 
-  
+  .timeHolder {
+    display: flex;
+  }
+
+  .timeChoice {
+    width: 160px;
+    margin-right: 16px;
+  }
+
+  .timeText {
+    padding-top: 8px;
+  }
